Update composer.json to maintain consistent formatting

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "vormiaphp/vormia": "^4.2",
-        "a2-atu/a2commerce": "^0.1.6",
+        "a2-atu/a2commerce": "^0.1.6"
     },
     "suggest": {},
     "require-dev": {
@@ -37,4 +37,3 @@
     "minimum-stability": "dev",
     "prefer-stable": true
 }
-
